# GenDiff

./: .coverage  README.md  coverage.xml  makefile  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
gendiff/: __init__.py  args.py  diff_engine.py  diff_generator.py  file.py  file_reader.py  generate_diff.py  generator.py  parser.py
gendiff/formatters/: format.py  json.py  plain.py  plain_text.py  pretty.py  pretty_text.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
gendiff/stylish/: __init__.py  json.py  plain_text.py  prety_text.py
tests/: test_answer_text.py
tests/fixtures/: correct_deep_diff_text  correct_diff_text  correct_json  correct_plain  correct_pretty  correct_prety_mini  deep_file2.json  file2.yaml
