[tool.poetry]
name = "NONVME_gendiff"
version = "0.1.0"
description = ""
authors = ["NONVME <efimmm.ev@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
